--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 layout: default
 title: "HZ Blog Homepage"
-navigationName: "Homepage"
+navigationName: "Home"
 description: "A Clean Blog powered by the awesome Jekyll"
 coverImg: "home-bg.jpg"
 group: "navigation"
