--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Contact us"
-navigationName: "Contact us"
+navigationName: "Contact Me"
 description: "Contact us and we will get back to you soon."
 coverImg: "contact-bg.jpg"
 group: "navigation"
