--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: "About"
+title: "About HZ"
 navigationName: "About"
-description: "Get to know more about us."
-coverImg: "about-bg.jpg"
+description: "Get to know more about me."
+coverImg: "about.jpg"
 group: "navigation"
 order: 2
 ---
