--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: "Contact us"
-navigationName: "Contact Me"
-description: "Contact us and we will get back to you soon."
-coverImg: "contact-bg.jpg"
+title: "Contact Me"
+navigationName: "Contact"
+description: "Contact me and I will get back to you soon..."
+coverImg: "contact.jpg"
 group: "navigation"
 order: 3
 ---
