blogging is missing

--- a/about.html
+++ b/about.html
@@ -7,18 +7,23 @@ coverImg: "about.jpg"
 group: "navigation"
 order: 2
 ---
-
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <!-- Main Content -->
     <div class="container">
+
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+               <p>HZ AKA Houssem Zaier is an Android enthusiast and a fullstack web developer based in Paris. He has a passion for writing apps for the mobile and also for the web.</p> 
+               <p>He has focused on native mobile development with Android SDK native. He worked also with cross plateform and hybride mobile framework.</p>
+               <p> When it comes to web development HZ is interrested in fullstack development: SPA (Single Page Apps) using the Angular2 as a Front-End Framework, and Java Spring Framework or AspDotNet Core as a Back-End technologie.</p> 
+               <p>HZ worked also on desktop apps using the WPF Microsoft desktop Framework, so he knows how to deal with rich client apps.</p>
             </div>
         </div>
-    </div>
+        
+     </div>
 
     <hr>
-
+     <div class="center-block" style="text-align: center"> 
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="dark" data-vanity="houssemzaier"><a class="LI-simple-link" href='https://fr.linkedin.com/in/houssemzaier?trk=profile-badge'>HZ</a></div>
+    </div>
      
